# physcov_airsim_drone

./: .gitignore  README.md  drone_lidar.py  hello_drone.py  main.py  recordedpath.npy  requirements.txt  rsr.py  settings.json  setup.cfg  test.ipynb  visualize.ipynb
LidarOutputs/: lidar_t1.npy  lidar_t2.npy  lidar_t3.npy  lidar_t4.npy
evaluation/: physcov_g-2_x-4_N-8_reach-6_rad-1.pkl  physcov_g-2_x-5_N-23_reach-6_rad-1.pkl  physcov_g-2_x-5_N-45_reach-6_rad-1.pkl  physcov_g-2_x-5_N-5_reach-6_rad-1.pkl  physcov_g-2_x-5_N-8_reach-6_rad-1.pkl
src/: __init__.py  physcov_airsim_drone.py  rsr.py
