[metadata]
name = zoraizq
version = 0.0.1
author = Zoraiz Qureshi
author_email = zoraizq@virginia.edu
description = Scaling PhysCov to 3D for drone physical coverage measurement, with real-time computation using LIDAR data from AirSim quadrotor drone.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZoraizQ/physcov_airsim_drone
project_urls =
    Bug Tracker = https://github.com/ZoraizQ/physcov_airsim_drone/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src